# densha_pico

./: .gitignore  README.md  README_CN.md
PCB/Prototype/: densha_pico.kicad_pcb  densha_pico.kicad_prl  densha_pico.kicad_pro  densha_pico.kicad_sch  densha_pico.kicad_sym  fp-info-cache  fp-lib-table  sym-lib-table
PCB/Prototype/3dmodels/: 8002A.step  IPS LCD 1.47inch ST7789 172x320px.step  TMC2209.step
PCB/Prototype/densha_pico.pretty/: 8002A_TAP.kicad_mod  DCDC_3to5.kicad_mod  FPC-0.5-1.0H-18P.kicad_mod  FPC0.5_10P.kicad_mod  NV3007_Stub.kicad_mod  RPi_Pico_SMD_No_USB.kicad_mod  SKRR.kicad_mod  SOT-23-8_Thin.kicad_mod  SmallJumper.kicad_mod  TMC2209_16P.kicad_mod  WS2812B-1204.kicad_mod  WS2812B-4020.kicad_mod  WS2812C-2020.kicad_mod  pn5180_conn.kicad_mod
firmware/: .gitignore  CMakeLists.txt
firmware/src/: CMakeLists.txt  as5600.c  as5600.h  board_defs.h  button.c  c51_demo.c  cli.c  cli.h  commands.c  config.c  config.h  gfx.c  gui.c  gui.h  lever.c  lever.h  light.c  light.h  main.c  mt6701.c  mt6701.h  nv3007.c  nv3007.h  rle.h  savedata.c  savedata.h  st7789.c  st7789.h  tmc2209.c  tmc2209.h  tmc2209.pio  usb_descriptors.c  usb_descriptors.h
firmware/src/res/: resource.h
